Adicionando nome dos autores da página

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+
+        }
+        .nome{
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
         }
         .btn {
             background-color: #4CAF50;
@@ -69,6 +75,14 @@
 
 <footer>
     <p>&copy; 2025 Projeto GitHub PR - Todos os direitos reservados.</p>
+    <div class="nome">
+        <p>Bruna Cardoso</p>
+        <p>Caio de Oliveira</p>
+        <p>Gabriel Ferreira</p>
+        <p>Giovanna Nascimento</p>
+        <p>Sophia Ragusa</p>
+    </div>
+
 </footer>
 
 </body>
