--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             padding: 15px;
             text-align: center;
         }
+        a{
+            color: black;
+            text-decoration: none;
+        }
+        a:hover{
+            color: white;
+        }
         main {
             padding: 20px;
         }
